--- a/css/maFormation.css
+++ b/css/maFormation.css
@@ -206,7 +206,7 @@ nav a:active{
 
 /* Section 4 */
 #s4{
-    margin-bottom: 100px;
+    margin-bottom: 30px;
 }
 #s4 > div:nth-child(1){
     display: flex;
@@ -214,7 +214,7 @@ nav a:active{
     margin-bottom: 50px;
 }
 #s4 > div:nth-child(2){
-    display: flex;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
     margin-bottom: 50px;
@@ -238,6 +238,28 @@ nav a:active{
 }
 #s4 h3,p{
     margin: 10px;
+}
+
+#s4 > div:nth-child(3){
+    display: flex;
+    margin-top: 120px;
+    justify-content: center;
+}
+.frontend::before{
+    content: "Front-ent";
+    position: absolute;
+    font-size: 14px;
+    background-color: var(--black);
+    color: var(--white);
+    top: 30px;
+    left: 30px;
+    padding: 5px;
+    z-index: 1;
+}
+/* Burger Menu */
+/* Burger Menu */
+header .burgerMenu{
+    display: none;
 }
 
 /*Modale */
@@ -384,15 +406,120 @@ body > header > nav > a{
         opacity: 5;
     }
 }
-@keyframes fadeImg {
-    0% {
-        opacity: 0;
-        transform: translateY(80px) scale(0);
+
+/* Responsive */
+
+/* Responsive */
+@media only screen and (min-width: 768px) and (max-width:1024px) {
+    /* Header */
+    header nav ul,header .buttonOrange{
+        display: none;
     }
-    100% {
-        opacity: 1;
-        transform: translateY(0) scale(1);
+    header .burgerMenu{
+        display: block;
+    }
+    /* Section 2 */
+    #s2{
+        grid-template-columns: 1fr;
+    }
+    #s2{
+        margin-bottom: 70px;
+    }
+    #s2 img{
+        width: 100%;
+    }
+    #S2grid > div:nth-child(1) > article {
+        top: -10px;
+        height: 45%;
+    }   
+    #S2grid > div:nth-child(2) > article {
+        bottom: -10px;
+        height: 45%;
+    }   
+    #s2 img{
+        height: 600px;
+    }
+    #s2 p{
+        width: 83%;
+        line-height: 33px;
+        margin-left: 20px;
+        margin-top: 35px;
+    }
+    #s2 h3{
+        margin-left: 20px;
+    }
+    /* Section 4 */
+    #s4 > div:nth-child(2) a {
+        bottom: -65px;
+    }
+    #s4 article{
+        margin-top: 60px;
+    }
+    #s4 > div:nth-child(2) {
+        grid-template-columns: 1fr 1fr;
+    }
+    #s4 > div:nth-child(2) > article:nth-child(3){
+        grid-column-start: 1;
+        grid-column-end: 3;
     }
 }
 
-/* Responsive */
+@media only screen and (min-width: 320px) and (max-width: 767px){
+    .container-1440{
+        max-width: unset;
+        margin: unset;
+        padding: unset;
+    }
+    /* header */
+    header nav ul,header .buttonOrange{
+        display: none;
+    }
+    header .burgerMenu{
+        display: block;
+    }
+    /* Section 2 */
+    #s2{
+        grid-template-columns: 1fr;
+    }
+    #s2{
+        margin-bottom: 70px;
+    }
+    #s2 img{
+        width: 100%;
+    }
+
+    #s2 h3{
+        margin-left: 20px;
+    }
+    /* Section 3 */
+    #liste-deroulente {
+        flex-direction: column;
+    }
+    #liste-deroulente li {
+        padding: 20px 0 20px 20px;
+    }
+    #liste-deroulente ul{
+        padding: 0px;
+    }
+    /* Section 4 */
+    #s4 article{
+        padding: 20px;
+        padding-bottom: 60px;
+        margin-top: 65px;
+    }
+    #s4 > div:nth-child(1) {
+        align-items: center;
+        flex-direction: column;
+    }
+    #s4 div:nth-child(1) .buttonDarkBlue{
+        width: 50%;
+        margin-top: 20px;
+    }
+    #s4 > div:nth-child(2) {
+        grid-template-columns: 1fr;
+    }
+    #s4 div:nth-child(2) a{
+        left: 30px; 
+        bottom: -65px;
+    }
+}
