--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body{
     margin: 0 auto;
     padding: 0 20px;
 }
+
 /* img{
     width: 150px;
 } */
@@ -173,7 +174,7 @@ nav a:active{
 #S2grid > div:nth-child(1) > article{
     top: 180px;
     right: 100px;
-    height: 320px;
+    height: 340px;
 }
 #S2grid > div:nth-child(2) > img{
     margin-left: 250px;
@@ -181,10 +182,11 @@ nav a:active{
 #S2grid > div:nth-child(2) > article{
     bottom: 180px;
     left: 100px;
+    height: 340px;
 }
 #s2 a{
     position: absolute;
-    left: 132px;
+    left: 120px;
     bottom: -25px;
 }
 /* Section 3 */
@@ -269,7 +271,7 @@ nav a:active{
     margin-bottom: 50px;
 }
 #s4 > div:nth-child(2){
-    display: flex;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
     margin-bottom: 50px;
@@ -286,15 +288,26 @@ nav a:active{
     border-color: var(--white);
     position: relative;
 }
+.frontend::before{
+    content: "Front-ent";
+    position: absolute;
+    font-size: 14px;
+    background-color: var(--black);
+    color: var(--white);
+    top: 30px;
+    left: 30px;
+    padding: 5px;
+    z-index: 1;
+}
+
 #s4 h3{
     font-size: 21px;
     margin-top: 5px;
     margin-bottom: 10px;
 }
-#s4 h3,p{
+#s4 h3, #s4 p{
     margin: 10px;
 }
-
 
 /*Modale */
 .modal1 {
@@ -488,7 +501,6 @@ nav a:active{
 }
 
 /* Footer */
-
 footer p{
     background-color: var(--vertClair);
     padding: 10px;
@@ -498,6 +510,10 @@ footer{
     background-color: var(--vertClair);
 }
 
+/* Burger Menu */
+header .burgerMenu{
+    display: none;
+}
 
 /* Animation */
 /* Animation header */
@@ -566,3 +582,138 @@ body > header > nav > a{
 }
 
 /* Responsive */
+@media only screen and (min-width: 768px) and (max-width:1024px) {
+    /* Header */
+    header nav ul,header .buttonOrange{
+        display: none;
+    }
+    header .burgerMenu{
+        display: block;
+    }
+    /* Section1 */
+    #s1{
+        grid-template-columns: 1fr;
+    }
+    #s1 > div{
+        text-align: center;
+    }
+    #s1 img{
+        max-width: 40%;
+    }
+    /* Section 2 */
+    #s2{
+        margin-bottom: 70px;
+    }
+    #s2 div{
+        gap: 100px;
+    }
+    #S2grid > div:nth-child(1) > article {
+        top: -10px;
+        height: 45%;
+    }   
+    #S2grid > div:nth-child(2) > article {
+        bottom: -10px;
+        height: 45%;
+    }   
+    #s2 img{
+        height: 600px;
+    }
+    #s2 p{
+        width: 83%;
+        line-height: 33px;
+        margin-left: 20px;
+        margin-top: 35px;
+    }
+    #s2 h3{
+        margin-left: 20px;
+    }
+    /* Section 4 */
+    #s4 > div:nth-child(2) {
+        grid-template-columns: 1fr 1fr;
+    }
+    #s4 > div:nth-child(2) > article:nth-child(3){
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 767px){
+    .container-1440{
+        max-width: unset;
+        margin: unset;
+        padding: unset;
+    }
+    /* header */
+    header nav ul,header .buttonOrange{
+        display: none;
+    }
+    header .burgerMenu{
+        display: block;
+    }
+    /* Section1 */
+    #s1{
+        grid-template-columns: 1fr;
+    }
+    #s1 > div{
+        text-align: center;
+    }
+    #s1 img{
+        max-width: 80%;
+    }
+    /* Section 2 */
+    #S2grid{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #S2grid > div:nth-child(2) > article, #S2grid > div:nth-child(1) > article {
+        position: static;
+        width: 85%;
+        height: 100%;
+    }
+    #S2grid > div:nth-child(2) > img, #S2grid > div:nth-child(1) > img {
+        margin: 0px;
+        width: 60%;
+        height: 60%;
+        object-fit: cover;
+    }
+    #S2grid > div.grid > article > a{
+        bottom: unset;
+        left: 80px;
+    }
+    #S2grid > div:nth-child(2) > article > a{
+        bottom: unset;
+        left: 80px;
+    }
+    /* Section 3 */
+    #liste-deroulente {
+        flex-direction: column;
+    }
+    #liste-deroulente li {
+        padding: 20px 0 20px 20px;
+    }
+    #liste-deroulente ul{
+        padding: 0px;
+    }
+    /* Section 4 */
+    #s4 article{
+        margin-top: 45px;
+        padding: 20px;
+        padding-bottom: 60px;
+    }
+    #s4 > div:nth-child(1) {
+        align-items: center;
+        flex-direction: column;
+    }
+    #s4 div:nth-child(1) .buttonDarkBlue{
+        width: 50%;
+        margin-top: 20px;
+    }
+    #s4 > div:nth-child(2) {
+        grid-template-columns: 1fr;
+    }
+    #s4 div:nth-child(2) a{
+        left: 30px; 
+        bottom: 6px;
+    }
+}
