--- a/css/mesProjet.css
+++ b/css/mesProjet.css
@@ -48,7 +48,9 @@ p{
 img{
     max-width: 50%;
 }
-
+.burgerMenu{
+    display: none;
+}
 .buttonOrange{
     background-color: var(--orange);
     padding: 15px 25px;
@@ -178,7 +180,9 @@ nav a:active{
 #s2 h3,p{
     margin: 10px;
 }
-
+#s2 > div:nth-child(1) > article{
+    margin-top: 50px;
+}
 /* Aside */
 aside{
     text-align: center;
